--- a/README.org
+++ b/README.org
@@ -50,7 +50,7 @@ Initially this will not support persistence.
 Also, this will not support any security.
 
 * Commands (AKA API):
-** PUT /queueName/*
+** PUT /queueName/
 
 Create a new queue. What the responses will be still need to be decided.
 
@@ -68,11 +68,11 @@ The body of the post will be the contents of the message.
 
 201 created, and perhaps the entity will be an id for the message.
 
-*GET*
+** GET
 
 Gets that do not match the following patterns will be answered with a 404.
 
-*GET msg/<em>queueName</em>*
+** GET msg//queueName/
 
 Get the next message from the queue <em>queueName</em>.  Here I need some way to to return a message ID in addition to the message body.  It may make sense for the response to be JSON: {'id': <em>integer</em>, 'content': &lt;valid JSON here&gt;}
 
@@ -82,13 +82,13 @@ If the response is as proposed, the the contents of the POST must be valid JSON 
 
 200, the message
 
-*GET queues*
+** GET queues
 
 Get a list of the created queues.
 
 200
 
-*DELETE <em>queueName</em>/<em>integer</em>*
+** DELETE /queueName///integer/
 
 Delete a message identified with integer from queue <em>queueName</em>.
 
@@ -96,7 +96,7 @@ Delete a message identified with integer from queue <em>queueName</em>.
 
 403, queuename or integer not found.
 
-** DELETE <em>queueName</em>*
+** DELETE <em>queueName</em>
 
 Delete a queue and all the messages in it.
 
