--- a/README.org
+++ b/README.org
@@ -88,7 +88,7 @@ Get a list of the created queues.
 
 200
 
-** DELETE /queueName\/integer/
+** DELETE /queueName/integer/
 
 Delete a message identified with integer from queue <em>queueName</em>.
 
@@ -96,7 +96,7 @@ Delete a message identified with integer from queue <em>queueName</em>.
 
 403, queuename or integer not found.
 
-** DELETE <em>queueName</em>
+** DELETE /queueName/
 
 Delete a queue and all the messages in it.
 
